--- a/.gitignore
+++ b/.gitignore
@@ -522,3 +522,4 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,opencv,visualstudio
+/hand_gesture_dataset/
